--- a/bachproef-latex-sjabloon-master/bachproef/standvanzaken.tex
+++ b/bachproef-latex-sjabloon-master/bachproef/standvanzaken.tex
@@ -15,3 +15,14 @@ Soms wil je de auteur niet expliciet vernoemen, dan gebruik je \texttt{$\backsla
 \textcite{Knuth1998} schreef een van de standaardwerken over sorteer- en zoekalgoritmen. Experten zijn het erover eens dat cloud computing een interessante opportuniteit vormen, zowel voor gebruikers als voor dienstverleners op vlak van informatietechnologie~\autocite{Creeger2009}.
 
 \lipsum[7-20]
+
+
+
+Redhat rapporteert dat Meltdown en Spectre tesamen een impact van 0 tot 19 percent heeft.
+Applicaties die vaak syscalls doen zullen meer prestatieverlies hebben. 
+De grootste verliezers zijn database workloads die veel gebruik maken van willekeurige data in de cache zoals sysbench, pgbench (voorheen 8 tot 19 percent, nu bijgewerkt met retpoline naar 4 tot 8 percent).
+Applicaties die weinig nood hebben aan kernelgeheugen zoals HPC (High Performace Computing) met OpenMP hebben weinig last van spectre en meltdown. Het verschil was eerst 2 tot 5 percent maar met beter updates is het gedaald naar 1 tot 2 percent.
+
+
+
+\autocite{Redhat2018}
